--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 ame = rollit
 version = 0.0.1
-description  =  A dice roller interface and library built in python.
+description = An intensely pointless programming language based off of dice notation.
 url = https://github.com/russels-crockpot/rollit
 author = Brendan McGloin
 author_email = russels_dash_crockpot-at-gmail
@@ -22,18 +22,16 @@ project_urls =
 package_dir = src
 packages = find:
 python_requires = >=3.7
-install_requires =
-    tatsu
 tests_requires =
     pytest
-    hypothesis
 
 [options.packages.find]
 where=src
 
 [options.extra_requires]
-cli =
-    click
+pretty-repl =
+    pygments
+    appdirs
     prompt_toolkit
 
 documentaton =
@@ -47,7 +45,6 @@ documentaton =
 
 development =
     pre-commit
-    yapf
 
 
 [yapf]
@@ -111,6 +108,5 @@ test = pytest
 
 [tool:pytest]
 testpaths = tests
-
 
 # vi: filetype=cfg
