Improved how scopes work and added the Reference element.

--- a/tests/evaluation/scripts/expressions.yaml
+++ b/tests/evaluation/scripts/expressions.yaml
@@ -61,6 +61,27 @@ tests:
     - ['2d4 + 1', 4]
     - ['2d4 + 1', 8]
     - ['2d4 + 1', 4]
+  - statements:
+    - ['a = {2d6}', null]
+    - ['a = {2d6}', null]
+    - ['a', [3, 4]]
+    - ['a.{1}', 3]
+    - ['a.{2}', 4]
+    - ['a.{#}', 2]
+    - ['a.{+}', 7]
+    - ['a.{=}', 7]
+  - statements:
+    - ['b = {2d6}', null]
+    - ['b', [1, 2]]
+    - ['b.{=}', 3]
+    - ['b.{+}', 3]
+    - ['b.{1} = 5', null]
+    - ['b', [5, 2]]
+    - ['b.{=}', 7]
+    - ['b.{+}', 7]
+    - ['b.{=} = 3', null]
+    - ['b.{=}', 3]
+    - ['b.{+}', 7]
 
 - name: reduce
   categories:
